--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
               <button>Send</button>
           </form>
       </main>
-  <script src="js/main.js"></script>
+  <!-- Include jquery, cookies, socket.io (client-side) and your own code -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
+    <script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
+    <script src="javascript.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
