--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
     <script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
-    <script src="javascript.js"></script>
+    <script src="js/javascript.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
